--- a/templates/login.html
+++ b/templates/login.html
@@ -24,6 +24,5 @@
                 <h3>You don't have account? <a href="/signup">Register now</a></h3>
             </form>
     </div>
-
-<script type=text/javascript  src="{{ url_for('static', filename='/js/index.js')}}"></script>
+ <script src="{{ url_for('static', filename='/js/index.js') }}"></script>
 {%endblock%}
