--- a/templates/signup.html
+++ b/templates/signup.html
@@ -24,5 +24,5 @@
             <h3>You already have account? <a href="/login">login</a></h3>
         </form>
     </div>
-<script type=text/javascript  src="{{ url_for('static', filename='/js/index.js')}}"></script>
+<script type=text/javascript  src="{{ url_for('static', filename='js/index.js')}}"></script>
 {%endblock%}
