--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -55,5 +55,5 @@
             </div>
         </div>
     </div>
-<script type=text/javascript  src="{{ url_for('static', filename='/js/welcome.js') }}"></script>
+<script type=text/javascript  src="{{ url_for('static', filename='js/welcome.js') }}"></script>
 {%endblock%}
