--- a/static/css/mafia.css
+++ b/static/css/mafia.css
@@ -337,3 +337,12 @@ background: blue;
 margin-left: auto;
 color:#ffffff;
 }   
+#skip{
+    margin-left: 5px;
+    border: none;
+    border-radius: 2px;
+    color: #ffffff;
+    background-color: red;
+    font-size: 15px;
+    padding: 2px 7px;
+}
