--- a/templates/mafia.html
+++ b/templates/mafia.html
@@ -29,12 +29,12 @@
             <h2>Report</h2>
         </div>
         <div id="social"  class="nav-footer">
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-instagram"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100009531172670/" target="_blank"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.instagram.com/sxl_h/" target="_blank"><i class="fa fa-instagram"></i></a>
             <a href="#"><i class="fa fa-twitter"></i></a>
         </div>
         <div id="border"  style="margin-bottom: 14px;"></div>
-        <span style="font-size: 13px;">&copy; 2020 Mafia game created by ABDELLAOUI</span>
+        <span style="font-size: 13px;">&copy; 2020 Mafia game created by HUHU</span>
     </footer>
 </body>
 </html>
