--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -55,5 +55,10 @@
             </div>
         </div>
     </div>
-<script type=text/javascript  src="{{ url_for('static', filename='js/welcome.js') }}"></script>
+    <script>
+        var username="{{username}}";
+        var room="{{room}}";
+        var room_id="{{room_id}}"
+    </script>
+    <script type=text/javascript  src="{{ url_for('static', filename='js/welcome.js') }}"></script>
 {%endblock%}
