--- a/templates/join.html
+++ b/templates/join.html
@@ -77,6 +77,6 @@
             </div>
         </div>
     </div>
-    <script src="{{url_for('static', filename='/js/mafia.js')}}"></script>
+    <script src="{{url_for('static', filename='js/mafia.js')}}"></script>
 
 {%endblock%}
