--- a/templates/mafia.html
+++ b/templates/mafia.html
@@ -8,6 +8,7 @@
     <script type=text/javascript  src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.8/socket.io.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script data-ad-client="ca-pub-2145633609624292" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/mafia.css') }}">
 </head>
 
