--- a/templates/mafia.html
+++ b/templates/mafia.html
@@ -22,6 +22,17 @@
         </ul>
     <a href="/logout"><button id="button">log out</button></a>
     </nav>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- annonces -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-2145633609624292"
+     data-ad-slot="9516095153"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     {% block content %}{% endblock %}
     <footer>   
         <div  class="nav-footer">
