--- a/templates/join.html
+++ b/templates/join.html
@@ -2,7 +2,16 @@
 {%block title%}Join{%endblock%}
 {%block content%}
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-fb+5w+4e-db+86"
+     data-ad-client="ca-pub-2145633609624292"
+     data-ad-slot="2950686808"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <div id="container">
         <div id="content">
             <h1>Welcome to mafia game</h1>
