--- a/templates/mafia.html
+++ b/templates/mafia.html
@@ -25,11 +25,9 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- annonces -->
 <ins class="adsbygoogle"
-     style="display:block"
+     style="display:inline-block;width:728px;height:90px"
      data-ad-client="ca-pub-2145633609624292"
-     data-ad-slot="9516095153"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
+     data-ad-slot="9516095153"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
